# workto

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/agent/: runner.py  tools.py
app/kb/: store.py
app/models/: __init__.py  chat.py  message.py  ops.py
app/routers/: __init__.py  chats.py  messages.py
knowledge/: fastapi_routing_guide.txt  openai_tool_calling.txt  python_async_basics.txt
tests/: conftest.py  test_agent.py  test_chats.py  test_database.py  test_health.py  test_kb_store.py  test_messages.py
